--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script type="text/javascript" src="scripts/scroller.js"></script>
     <script type="text/javascript" src="scripts/addition.js"></script>
     <script type="text/javascript" src="scripts/jquery.min.js"></script>
+    <script type="text/javascript" src="scripts/jquery.js"></script>
+    <script type="text/javascript" src="scripts/slider.js"></script>
     <link rel="stylesheet" type="text/css" href="scripts/style.css">
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 </head>
@@ -73,7 +75,6 @@
 
 
 
-
                     <a onclick="document.getElementById('x1').click();">
                         <div id="headerlinktop">
 
@@ -83,119 +84,131 @@
                     </a>
 
                     <div class="verticalcenter">
-                        <br>
-                        <br>
-                        <div class="big"><b>B</b>ookshelf</div>
-                        <br>
-                        <br>
 
-                        <a href="https://www.fanfiction.net/s/4450093/1/The-Secret-Diary-Of-Cameron-Baum">
-                            <div class="child">
-                                The Secret Diary
-                                <br>Of Cameron Baum
-                                <br>
-                                <br>
-                                <br>Pjazz
-                                <br>
-                                <br> Status:
-                                <div class="orange">In progress</div>
+                        <div id="sliderholder">
+
+                            <div class="section slides">
+                                <div class="slide slide1">
+                                    <a href="https://www.fanfiction.net/s/4450093/1/The-Secret-Diary-Of-Cameron-Baum">
+                                        <div class="child">
+                                            The Secret Diary
+                                            <br>Of Cameron Baum
+                                            <br>
+                                            <br>
+                                            <br>Pjazz
+                                            <br>
+                                            <br> Status:
+                                            <div class="orange">In progress</div>
+                                        </div>
+                                    </a>
+
+                                    <a href="https://www.fanfiction.net/s/6179677/1/Terminator-Searching-for-Serenity">
+                                        <div class="child">
+                                            Searching for Serenity
+                                            <br>
+                                            <br>
+                                            <br>River2027
+                                            <br>
+                                            <br> Status:
+                                            <div class="green">Completed</div>
+                                        </div>
+                                    </a>
+
+                                    <a href="https://www.fanfiction.net/s/4988947/1/Born-to-Fight">
+                                        <div class="child">
+                                            Born To Fight
+                                            <br>
+                                            <br>
+                                            <br>
+                                            <br>River2027
+                                            <br>
+                                            <br> Status:
+                                            <div class="green">Completed</div>
+                                        </div>
+                                    </a>
+
+                                </div>
+                                <div class="slide slide2">
+                                    <a href="https://www.fanfiction.net/s/6563270/1/I-Love-You-Too">
+                                        <div class="child">
+                                            I Love You Too
+                                            <br>
+                                            <br>
+                                            <br>
+                                            <br>King Steve
+                                            <br>
+                                            <br> Status:
+                                            <div class="green">Completed</div>
+                                        </div>
+                                    </a>
+
+                                    <a href="https://www.fanfiction.net/s/4411569/1/Judgement-s-Dawn">
+                                        <div class="child">
+                                            Judgement's Dawn
+                                            <br>
+                                            <br>
+                                            <br>King Steve
+                                            <br>
+                                            <br> Status:
+                                            <div class="green">Completed</div>
+                                        </div>
+                                    </a>
+                                    <a href="https://www.fanfiction.net/s/5065966/1/Century">
+                                        <div class="child">
+                                            Century
+                                            <br>
+                                            <br>
+                                            <br>
+                                            <br>King Steve
+                                            <br>
+                                            <br> Status:
+                                            <div class="green">Completed</div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="slide slide3">
+
+
+                                    <a href="https://www.fanfiction.net/s/11319179/1/Cameron-Grows-Up">
+                                        <div class="child">
+                                            Cameron Grows Up
+
+                                            <br>
+                                            <br>
+                                            <br>ReaganKaseyFan
+                                            <br>
+                                            <br> Status:
+                                            <div class="green">Completed</div>
+                                        </div>
+                                    </a>
+
+                                    <a href="https://www.fanfiction.net/s/11347885/1/The-Future-Cameron">
+                                        <div class="child">
+                                            The Future Cameron
+
+                                            <br>
+                                            <br>
+                                            <br>ReaganKaseyFan
+                                            <br>
+                                            <br> Status:
+                                            <div class="green">Completed</div>
+                                        </div>
+                                    </a>
+
+
+                                </div>
+
                             </div>
-                        </a>
-
-                        <a href="https://www.fanfiction.net/s/4988947/1/Born-to-Fight">
-                            <div class="child">
-                                Born To Fight
-                                <br>
-                                <br>
-                                <br>
-                                <br>River2027
-                                <br>
-                                <br> Status:
-                                <div class="green">Completed</div>
-                            </div>
-                        </a>
 
 
-                        <a href="https://www.fanfiction.net/s/6563270/1/I-Love-You-Too">
-                            <div class="child">
-                                I Love You Too
-                                <br>
-                                <br>
-                                <br>
-                                <br>King Steve
-                                <br>
-                                <br> Status:
-                                <div class="green">Completed</div>
-                            </div>
-                        </a>
-
-                        <a href="https://www.fanfiction.net/s/4411569/1/Judgement-s-Dawn">
-                            <div class="child">
-                                Judgement's Dawn
-                                <br>
-                                <br>
-                                <br>King Steve
-                                <br>
-                                <br> Status:
-                                <div class="green">Completed</div>
-                            </div>
-                        </a>
-
-                        <a href="https://www.fanfiction.net/s/5065966/1/Century">
-                            <div class="child">
-                                Century
-                                <br>
-                                <br>
-                                <br>
-                                <br>King Steve
-                                <br>
-                                <br> Status:
-                                <div class="green">Completed</div>
-                            </div>
-                        </a>
-                        <br>
-
-                        <a href="https://www.fanfiction.net/s/11319179/1/Cameron-Grows-Up">
-                            <div class="child">
-                                Cameron Grows Up
-
-                                <br>
-                                <br>
-                                <br>ReaganKaseyFan
-                                <br>
-                                <br> Status:
-                                <div class="green">Completed</div>
-                            </div>
-                        </a>
-
-                        <a href="https://www.fanfiction.net/s/11347885/1/The-Future-Cameron">
-                            <div class="child">
-                                The Future Cameron
-
-                                <br>
-                                <br>
-                                <br>ReaganKaseyFan
-                                <br>
-                                <br> Status:
-                                <div class="green">Completed</div>
-                            </div>
-                        </a>
-
-                        <a href="https://www.fanfiction.net/s/6179677/1/Terminator-Searching-for-Serenity">
-                            <div class="child">
-                                Searching for Serenity
-                                <br>
-                                <br>
-                                <br>River2027
-                                <br>
-                                <br> Status:
-                                <div class="green">Completed</div>
-                            </div>
-                        </a>
 
 
+
+
+
+
+                        </div>
                     </div>
-
 
                     <a onclick="document.getElementById('x3').click();">
                         <div id="footerlink">
@@ -204,7 +217,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+
 
 
             </section>
@@ -241,17 +254,17 @@
                 </div>
 
             </section>
+            </div>
+
         </div>
 
-    </div>
-
-    <script>
-        onePageScroll(".main", {
+        <script>
+            onePageScroll(".main", {
             sectionContainer: "section",
             loop: true,
             responsiveFallback: false
         });
-    </script>
+        </script>
 </body>
 
 </html>
