--- a/index.html
+++ b/index.html
@@ -2,269 +2,263 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>Jawe´s Archive</title>
+	<meta charset="utf-8">
+	<title>Jawe´s Archive</title>
 
-    <script type="text/javascript" src="scripts/scroller.js"></script>
-    <script type="text/javascript" src="scripts/addition.js"></script>
-    <script type="text/javascript" src="scripts/jquery.min.js"></script>
-    <script type="text/javascript" src="scripts/jquery.js"></script>
-    <script type="text/javascript" src="scripts/slider.js"></script>
-    <link rel="stylesheet" type="text/css" href="scripts/style.css">
-    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+	<script type="text/javascript" src="scripts/scroller.js"></script>
+	<script type="text/javascript" src="scripts/addition.js"></script>
+	<script type="text/javascript" src="scripts/jquery.min.js"></script>
+	<script type="text/javascript" src="scripts/jquery.js"></script>
+	<script type="text/javascript" src="scripts/slider.js"></script>
+	<link rel="stylesheet" type="text/css" href="scripts/style.css">
+	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 </head>
 
 <body>
-    <div id="overlay">
-        <div id="progstat"></div>
-    </div>
-    <div class="wrapper">
-        <div class="main">
-            <section class="page1">
-                <div class="background"></div>
-                <div class="page_container">
-                    <a href="http://jawe.pw/portable">
-                        <div id="mobilebanner">
+	<div id="overlay">
+		<div id="progstat"></div>
+	</div>
+	<div class="wrapper">
+		<div class="main">
+			<section class="page1">
+				<div class="background"></div>
+				<div class="page_container">
+					<a href="http://jawe.pw/portable">
+						<div id="mobilebanner">
 
-                            <div class="medium">On mobile but didn't get a pop-up? Click here</div>
-                        </div>
+							<div class="mediumsmall">On mobile but didn't get a pop-up? Click here</div>
+						</div>
 
-                    </a>
-                    <div class="verticalcenter">
-                        <div class="big"><b>J</b>awe's <b>A</b>rchive</div>
-                        <br>
-                        <br>
-                        <br>
-                        <div class="small">
-                            Welcome!
-                            <br>
-                            <br>On here you can find a whole lot of Terminator: The Sarah Connor Chronicles FanFiction stories
-                            I collected.
-                            <br>I take no credit for the content you see on here, all rights belong to their respective owners,
-                            yada yada.
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
+					</a>
+					<div class="verticalcenter">
+						<div class="big"><b>J</b>awe's <b>A</b>rchive</div>
+						<br>
+						<br>
+						<br>
+						<div class="small">
+							Welcome!
+							<br>
+							<br>On here you can find a whole lot of Terminator: The Sarah Connor Chronicles FanFiction stories I collected.
+							<br>I take no credit for the content you see on here, all rights belong to their respective owners, yada yada.
+							<br>
+							<br>
+							<br>
+							<br>
+							<br>
 
-                            <br>
-                            <br>
-                        </div>
-                        <div class="medium">You can find the bookshelf on the next page.</div>
-                    </div>
-                    <a onclick="document.getElementById('x2').click();">
-                        <div id="footerlink">
-                            <div class="jumppage">
-                                <div class="medium">Go down</div>
-                            </div>
-                    </a>
+							<br>
+							<br>
+						</div>
+						<div class="medium">You can find the bookshelf on the next page.</div>
+					</div>
+					<a onclick="document.getElementById('x2').click();">
+						<div id="footerlink">
+							<div class="jumppage">
+								<div class="mediumsmall">Go down</div>
+							</div>
+					</a>
 
 
-
-                    </div>
-                </div>
-
+					</div>
+				</div>
 
 
-            </section>
+			</section>
 
-            <section class="page2">
-                <div class="background2"></div>
-                <div class="page_container">
-
-
-
-                    <a onclick="document.getElementById('x1').click();">
-                        <div id="headerlinktop">
-
-                            <div class="medium">Go up</div>
-                        </div>
-
-                    </a>
-
-                    <div class="verticalcenter">
-
-                        <div id="sliderholder">
-
-                            <div class="section slides">
-                                <div class="slide slide1">
-                                    <a href="https://www.fanfiction.net/s/4450093/1/The-Secret-Diary-Of-Cameron-Baum">
-                                        <div class="child">
-                                            The Secret Diary
-                                            <br>Of Cameron Baum
-                                            <br>
-                                            <br>
-                                            <br>Pjazz
-                                            <br>
-                                            <br> Status:
-                                            <div class="orange">In progress</div>
-                                        </div>
-                                    </a>
-
-                                    <a href="https://www.fanfiction.net/s/6179677/1/Terminator-Searching-for-Serenity">
-                                        <div class="child">
-                                            Searching for Serenity
-                                            <br>
-                                            <br>
-                                            <br>River2027
-                                            <br>
-                                            <br> Status:
-                                            <div class="green">Completed</div>
-                                        </div>
-                                    </a>
-
-                                    <a href="https://www.fanfiction.net/s/4988947/1/Born-to-Fight">
-                                        <div class="child">
-                                            Born To Fight
-                                            <br>
-                                            <br>
-                                            <br>
-                                            <br>River2027
-                                            <br>
-                                            <br> Status:
-                                            <div class="green">Completed</div>
-                                        </div>
-                                    </a>
-
-                                </div>
-                                <div class="slide slide2">
-                                    <a href="https://www.fanfiction.net/s/6563270/1/I-Love-You-Too">
-                                        <div class="child">
-                                            I Love You Too
-                                            <br>
-                                            <br>
-                                            <br>
-                                            <br>King Steve
-                                            <br>
-                                            <br> Status:
-                                            <div class="green">Completed</div>
-                                        </div>
-                                    </a>
-
-                                    <a href="https://www.fanfiction.net/s/4411569/1/Judgement-s-Dawn">
-                                        <div class="child">
-                                            Judgement's Dawn
-                                            <br>
-                                            <br>
-                                            <br>King Steve
-                                            <br>
-                                            <br> Status:
-                                            <div class="green">Completed</div>
-                                        </div>
-                                    </a>
-                                    <a href="https://www.fanfiction.net/s/5065966/1/Century">
-                                        <div class="child">
-                                            Century
-                                            <br>
-                                            <br>
-                                            <br>
-                                            <br>King Steve
-                                            <br>
-                                            <br> Status:
-                                            <div class="green">Completed</div>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="slide slide3">
+			<section class="page2">
+				<div class="background2"></div>
+				<div class="page_container">
 
 
-                                    <a href="https://www.fanfiction.net/s/11319179/1/Cameron-Grows-Up">
-                                        <div class="child">
-                                            Cameron Grows Up
+					<a onclick="document.getElementById('x1').click();">
+						<div id="headerlinktop">
 
-                                            <br>
-                                            <br>
-                                            <br>ReaganKaseyFan
-                                            <br>
-                                            <br> Status:
-                                            <div class="green">Completed</div>
-                                        </div>
-                                    </a>
+							<div class="mediumsmall">Go up</div>
+						</div>
 
-                                    <a href="https://www.fanfiction.net/s/11347885/1/The-Future-Cameron">
-                                        <div class="child">
-                                            The Future Cameron
+					</a>
 
-                                            <br>
-                                            <br>
-                                            <br>ReaganKaseyFan
-                                            <br>
-                                            <br> Status:
-                                            <div class="green">Completed</div>
-                                        </div>
-                                    </a>
+					<div class="verticalcenter">
+
+						<div id="sliderholder">
+
+							<div class="section slides">
+								<div class="slide slide1">
+									<a href="https://www.fanfiction.net/s/4450093/1/The-Secret-Diary-Of-Cameron-Baum">
+										<div class="child">
+											The Secret Diary
+											<br>Of Cameron Baum
+											<br>
+											<br>
+											<br>Pjazz
+											<br>
+											<br> Status:
+											<div class="orange">In progress</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/6179677/1/Terminator-Searching-for-Serenity">
+										<div class="child">
+											Searching for Serenity
+											<br>
+											<br>
+											<br>River2027
+											<br>
+											<br> Status:
+											<div class="green">Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/4988947/1/Born-to-Fight">
+										<div class="child">
+											Born To Fight
+											<br>
+											<br>
+											<br>
+											<br>River2027
+											<br>
+											<br> Status:
+											<div class="green">Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/6563270/1/I-Love-You-Too">
+										<div class="child">
+											I Love You Too
+											<br>
+											<br>
+											<br>
+											<br>King Steve
+											<br>
+											<br> Status:
+											<div class="green">Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/4411569/1/Judgement-s-Dawn">
+										<div class="child">
+											Judgement's Dawn
+											<br>
+											<br>
+											<br>King Steve
+											<br>
+											<br> Status:
+											<div class="green">Completed</div>
+										</div>
+									</a>
+									<a href="https://www.fanfiction.net/s/5065966/1/Century">
+										<div class="child">
+											Century
+											<br>
+											<br>
+											<br>
+											<br>King Steve
+											<br>
+											<br> Status:
+											<div class="green">Completed</div>
+										</div>
+									</a>
+
+								</div>
+								<div class="slide slide2">
+									<a href="https://www.fanfiction.net/s/11319179/1/Cameron-Grows-Up">
+										<div class="child">
+											Cameron Grows Up
+
+											<br>
+											<br>
+											<br>ReaganKaseyFan
+											<br>
+											<br> Status:
+											<div class="green">Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/11347885/1/The-Future-Cameron">
+										<div class="child">
+											The Future Cameron
+
+											<br>
+											<br>
+											<br>ReaganKaseyFan
+											<br>
+											<br> Status:
+											<div class="green">Completed</div>
+										</div>
+									</a>
+								</div>
+								<div class="slide slide3">
 
 
-                                </div>
+									<a>
+										<div class="child">
+											<br>
+											<br>
+											<br>
+											<br>More coming soon...
+											<br>
+										</div>
+									</a>
 
-                            </div>
+								</div>
 
-
-
-
-
-
-
-
-                        </div>
-                    </div>
-
-                    <a onclick="document.getElementById('x3').click();">
-                        <div id="footerlink">
-                            <div class="jumppage">
-                                <div class="medium">Go down</div>
-                            </div>
-                        </div>
-                    </a>
+							</div>
 
 
+						</div>
+					</div>
 
-            </section>
-
-            <section class="page3">
-                <div class="page_container">
-                    <a onclick="document.getElementById('x2').click();">
-                        <div id="headerlinktop">
-                            <div class="medium">Go up</div>
-                        </div>
-                    </a>
-                    <div class="background3"></div>
-                    <div class="verticalcenter">
+					<a onclick="document.getElementById('x3').click();">
+						<div id="footerlink">
+							<div class="jumppage">
+								<div class="mediumsmall">Go down</div>
+							</div>
+						</div>
+					</a>
 
 
+			</section>
 
-                        <div class="verticalcenter">
-                            <div class="big">Made with</div>
+			<section class="page3">
+				<div class="page_container">
+					<a onclick="document.getElementById('x2').click();">
+						<div id="headerlinktop">
+							<div class="mediumsmall">Go up</div>
+						</div>
+					</a>
+					<div class="background3"></div>
 
-                            <div class="heart">♥</div>
-                        </div>
-                    </div>
-                    <div id="footer">
+
+					<div class="verticalcenter">
+						<div class="big">Made with</div>
+
+						<div class="heart">♥</div>
+					</div>
+
+					<div id="footer">
 
 
+						<div class="construction1"></div>
+						<div class="footertext">
+							OnePageScroller.js by Pete R. || Page fade-in by Roko C.</div>
+					</div>
 
-                        <div class="construction1"></div>
-                        <div class="footertext">
-                            OnePageScroller.js by Pete R. || Page fade-in by Roko C.</div>
-                    </div>
+				</div>
+				<div>
+				</div>
 
-                </div>
-                <div>
-                </div>
+			</section>
+			</div>
 
-            </section>
-            </div>
+		</div>
 
-        </div>
-
-        <script>
-            onePageScroll(".main", {
-            sectionContainer: "section",
-            loop: true,
-            responsiveFallback: false
-        });
-        </script>
+		<script>
+			onePageScroll(".main", {
+				sectionContainer: "section",
+				loop: true,
+				responsiveFallback: false
+			});
+		</script>
 </body>
 
 </html>
